--- a/movil.html
+++ b/movil.html
@@ -53,7 +53,38 @@
     <!-- Web -->
     <!-- heading -->
     <section>
+      <br />
       <h2 class="heading">Desarrollo Movil</h2>
+      <div class="project">
+        <div class="wrapper">
+          <div class="wrapper-holder">
+            <div id="slider-img-ld-1" class="slider-img">
+              <img src="assets/img/projects/web/ligadeportiva/1.png" alt="" />
+            </div>
+            <div id="slider-img-ld-2">
+              <img src="assets/img/projects/web/ligadeportiva/2.png" alt="" />
+            </div>
+            <div id="slider-img-ld-3">
+              <img src="assets/img/projects/web/ligadeportiva/3.png" alt="" />
+            </div>
+            <div id="slider-img-ld-4">
+              <img src="assets/img/projects/web/ligadeportiva/4.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="button-holder">
+          <a href="#slider-img-ld-1" class="button"></a>
+          <a href="#slider-img-ld-2" class="button"></a>
+          <a href="#slider-img-ld-3" class="button"></a>
+          <a href="#slider-img-ld-4" class="button"></a>
+        </div>
+        <h2>PAIKA APP</h2>
+        <p>
+          En PAIKA APP me desenvolví como desarrollador FullStack participando
+          en todas las etapas del desarrollo del software para la aplicaíon
+          movil, así como en la API de la misma.
+        </p>
+      </div>
     </section>
 
     <!-- Footer -->
