--- a/web.html
+++ b/web.html
@@ -73,12 +73,12 @@
           </div>
         </div>
         <div class="button-holder">
-          <a href="#slider-img-1" class="button"> </a>
-          <a href="#slider-img-2" class="button"> </a>
+          <a href="#slider-img-1" class="button"></a>
+          <a href="#slider-img-2" class="button"></a>
           <a href="#slider-img-3" class="button"></a>
           <a href="#slider-img-4" class="button"></a>
         </div>
-        <h2>Modulo Captura de Calificaciones y Faltas</h2>
+        <h2>MODULO CAPTURA DE CALIFICACIONES Y FALTAS</h2>
         <p>
           En la Universidad Politécnica de Pénjamo, desempeñé un papel crucial
           en el desarrollo de un módulo integral para la plataforma en línea. Mi
@@ -91,6 +91,65 @@
           la gestión académica. Esta experiencia fortaleció mis habilidades
           técnicas y dejó una marca positiva en el Departamento de Sistemas de
           la universidad.
+        </p>
+      </div>
+      <div class="project">
+        <div class="wrapper">
+          <div class="wrapper-holder">
+            <div id="slider-img-tektur-1" class="slider-img">
+              <img src="assets/img/projects/web/tektur/1.png" alt="" />
+            </div>
+            <div id="slider-img-tektur-2">
+              <img src="assets/img/projects/web/tektur/2.png" alt="" />
+            </div>
+            <div id="slider-img-tektur-3">
+              <img src="assets/img/projects/web/tektur/3.png" alt="" />
+            </div>
+            <div id="slider-img-tektur-4">
+              <img src="assets/img/projects/web/tektur/4.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="button-holder">
+          <a href="#slider-img-tektur-1" class="button"></a>
+          <a href="#slider-img-tektur-2" class="button"></a>
+          <a href="#slider-img-tektur-3" class="button"></a>
+          <a href="#slider-img-tektur-4" class="button"></a>
+        </div>
+        <h2>TEKTUR</h2>
+        <p>
+          En este proyecto realizé el desarrollo frontend trabajando como
+          freelance para catrina labs.
+        </p>
+      </div>
+      <div class="project">
+        <div class="wrapper">
+          <div class="wrapper-holder">
+            <div id="slider-img-ld-1" class="slider-img">
+              <img src="assets/img/projects/web/ligadeportiva/1.png" alt="" />
+            </div>
+            <div id="slider-img-ld-2">
+              <img src="assets/img/projects/web/ligadeportiva/2.png" alt="" />
+            </div>
+            <div id="slider-img-ld-3">
+              <img src="assets/img/projects/web/ligadeportiva/3.png" alt="" />
+            </div>
+            <div id="slider-img-ld-4">
+              <img src="assets/img/projects/web/ligadeportiva/4.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="button-holder">
+          <a href="#slider-img-ld-1" class="button"></a>
+          <a href="#slider-img-ld-2" class="button"></a>
+          <a href="#slider-img-ld-3" class="button"></a>
+          <a href="#slider-img-ld-4" class="button"></a>
+        </div>
+        <h2>LIGA DEPORTIVA INTERCOLEGIAL</h2>
+        <p>
+          En este proyecto realizé el desarrollo frontend de la web y parte del
+          backend para el sistema de aministración trabajando como freelance
+          para catrina labs.
         </p>
       </div>
     </section>
