--- a/web.html
+++ b/web.html
@@ -119,7 +119,7 @@
         <h2>TEKTUR</h2>
         <p>
           En este proyecto realizé el desarrollo frontend trabajando como
-          freelance para catrina labs.
+          freelancer para catrina labs.
         </p>
       </div>
       <div class="project">
@@ -148,7 +148,7 @@
         <h2>LIGA DEPORTIVA INTERCOLEGIAL</h2>
         <p>
           En este proyecto realizé el desarrollo frontend de la web y parte del
-          backend para el sistema de aministración trabajando como freelance
+          backend para el sistema de aministración trabajando como freelancer
           para catrina labs.
         </p>
       </div>
