--- a/movil.html
+++ b/movil.html
@@ -58,25 +58,25 @@
       <div class="project">
         <div class="wrapper">
           <div class="wrapper-holder">
-            <div id="slider-img-ld-1" class="slider-img">
-              <img src="assets/img/projects/web/ligadeportiva/1.png" alt="" />
+            <div id="slider-img-paika-1" class="slider-img">
+              <img src="assets/img/projects/movil/paika/1.png" alt="" />
             </div>
-            <div id="slider-img-ld-2">
-              <img src="assets/img/projects/web/ligadeportiva/2.png" alt="" />
+            <div id="slider-img-paika-2">
+              <img src="assets/img/projects/movil/paika/2.png" alt="" />
             </div>
-            <div id="slider-img-ld-3">
-              <img src="assets/img/projects/web/ligadeportiva/3.png" alt="" />
+            <div id="slider-img-paika-3">
+              <img src="assets/img/projects/movil/paika/3.png" alt="" />
             </div>
-            <div id="slider-img-ld-4">
-              <img src="assets/img/projects/web/ligadeportiva/4.png" alt="" />
+            <div id="slider-img-paika-4">
+              <img src="assets/img/projects/movil/paika/4.png" alt="" />
             </div>
           </div>
         </div>
         <div class="button-holder">
-          <a href="#slider-img-ld-1" class="button"></a>
-          <a href="#slider-img-ld-2" class="button"></a>
-          <a href="#slider-img-ld-3" class="button"></a>
-          <a href="#slider-img-ld-4" class="button"></a>
+          <a href="#slider-img-paika-1" class="button"></a>
+          <a href="#slider-img-paika-2" class="button"></a>
+          <a href="#slider-img-paika-3" class="button"></a>
+          <a href="#slider-img-paika-4" class="button"></a>
         </div>
         <h2>PAIKA APP</h2>
         <p>
