--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
       <h2 class="heading">Portafolio</h2>
       <div class="portfolio-content">
         <div class="portfolio-box">
-          <img src="assets/img/paika.png" alt="" class="portfolio-img" />
+          <img src="assets/img/web.png" alt="" class="portfolio-img" />
           <div class="portfolio-overlay">
             <h2>Desarrollo Web</h2>
             <a href="web.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="assets/img/paika.png" alt="" class="portfolio-img" />
+          <img src="assets/img/movil.png" alt="" class="portfolio-img" />
           <div class="portfolio-overlay">
             <h2>Desarrollo Movil</h2>
             <a href="movil.html"><i class="bx bx-link-external"></i></a>
