--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                     Desarrollo Backend
                     <ul>
                       <li>• Node JS</li>
+                      <li>• .Net</li>
                     </ul>
                   </li>
                 </ul>
@@ -182,20 +183,57 @@
                   <li>
                     <span></span>
                     <divTab class="timeline-title"
-                      >Universidad Politécnica de Pénjamo</divTab
+                      >Irox IT</divTab
                     ><br />
                     <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i> Pénjamo, Guanajuato, Mex. </divTab
+                      ><i class="bx bxs-map-pin"></i> Leon, Guanajuato </divTab
                     ><br />
                     <divTab class="timeline-info">
-                      Desarrollé con PHP un módulo para el sistema integral de
-                      la universidad, para la captura de calificaciones y la
-                      generación automatizada de actas finales y listas de
-                      asistencia en PDF y Excel. </divTab
-                    ><br />
+                      • Desarrollo nativo android y backend con .net.
+                      </divTab
+                    >
                     <br />
-                    <h6>Prácticas profesionales</h6>
-                    <divTab class="timeline-type"> Presencial </divTab><br />
+                    <divTab class="timeline-type"> Hibrido </divTab><br />
+                    <divTab class="timeline-time">
+                      <span>Actualidad</span>
+                      <span>Agosto 2024</span>
+                    </divTab>
+                  </li>
+                  <li>
+                    <span></span>
+                    <divTab class="timeline-title"
+                      >Evolve Interactive</divTab
+                    ><br />
+                    <divTab class="timeline-ubication"
+                      ><i class="bx bxs-map-pin"></i> Benito Juárez, Ciudad de Mexico </divTab
+                    ><br />
+                    <divTab class="timeline-info">
+                      • Experiencia en desarrollo nativo para Android e iOS.
+                      <br>
+                      • Especializado en la migración de apps nativas a Flutter.
+                      </divTab
+                    >
+                    <br />
+                    <divTab class="timeline-type"> Remoto </divTab><br />
+                    <divTab class="timeline-time">
+                      <span>Julio 2024</span>
+                      <span>Febrero 2024</span>
+                    </divTab>
+                  </li>
+                  <li>
+                    <span></span>
+                    <divTab class="timeline-title"
+                      >Catrina Labs</divTab
+                    ><br />
+                    <divTab class="timeline-ubication"
+                      ><i class="bx bxs-map-pin"></i> Guadalajara, Jalisco </divTab
+                    ><br />
+                    <divTab class="timeline-info">
+                      • Experiencia en desarrollo nativo para Android e iOS.
+                      </divTab
+                    >
+                    <br />
+                    <divTab class="timeline-type"> Remoto </divTab><br />
                     <divTab class="timeline-time">
                       <span>Diciembre 2023</span>
                       <span>Septiembre 2023</span>
@@ -209,11 +247,7 @@
                       (USA)</divTab
                     ><br />
                     <divTab class="timeline-info"
-                      >Lideré el desarrollo completo de un sistema de
-                      videollamadas y comunicación en tiempo real, además
-                      trabajé en el frontend y backend, utilizando tecnologías
-                      como SwiftUI (Swift), Flutter (Dart), NodeJS (JavaScript),
-                      MySQL y Amazon Web Services (EC2).</divTab
+                      >Lideré el desarrollo de un sistema de videollamadas, trabajando con SwiftUI, Flutter, Node.js, MySQL y AWS (EC2).</divTab
                     ><br />
                     <divTab class="timeline-type">Remoto</divTab>
                     <divTab class="timeline-time">
