--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         >
           <h3>INGENIERO EN SOFTWARE</h3>
           <h2>Hola, Soy <span class="color">Eduardo</span></h2>
-          <p>Te invito a saber de mi</p>
+          <p>Aquí es donde cada proyecto es una nueva aventura y cada reto es una oportunidad de crecer. Me apasiona lo que hago y creo que el éxito se construye paso a paso, con creatividad y un enfoque fresco. ¿Te animas a descubrir cómo transformo ideas en realidad? ¡Sigue explorando!</p>
 
           <!-- Social -->
           <div class="social">
@@ -85,13 +85,11 @@
       <div class="about-content">
         <div class="about-data">
           <span>Acerca de mí</span>
-          <h2>Desarrollador de Software</h2>
+          <h2>Tecnología, aprendizaje y determinación</h2>
           <div class="about-text">
             <p>
-              Soy un desarrollador de software muy entusiasta y amante de la
-              tecnología.<br />
-              Me gusta estar en constante aprendizaje por eso soy una persona
-              autodidacta muy enfocada en sus objetivos.
+              Soy una persona entusiasta y apasionada por la tecnología, con un enfoque en el aprendizaje y la mejora continua. Mi naturaleza autodidacta me permite adquirir nuevas habilidades de manera independiente y enfrentar desafíos con determinación.
+¡Descarga mi CV y descubre más!
             </p>
           </div>
           <a href="assets/docs/cvEduardoValadez.pdf" class="btn" download="">
@@ -118,7 +116,6 @@
           <div class="tabs">
             <div class="tab-header">
               <div class="active"><i class="bx bx-code"></i>Skills</div>
-              <div><i class="bx bxl-dev-to"></i> Experiencia</div>
               <div><i class="bx bx-book-open"></i> Educación</div>
             </div>
             <div class="tab-indicator"></div>
@@ -177,88 +174,6 @@
                     </ul>
                   </li>
                 </ul>
-              </div>
-              <div class="timeline-container">
-                <ul>
-                  <li>
-                    <span></span>
-                    <divTab class="timeline-title"
-                      >Irox IT</divTab
-                    ><br />
-                    <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i> Leon, Guanajuato </divTab
-                    ><br />
-                    <divTab class="timeline-info">
-                      • Desarrollo nativo android y backend con .net.
-                      </divTab
-                    >
-                    <br />
-                    <divTab class="timeline-type"> Hibrido </divTab><br />
-                    <divTab class="timeline-time">
-                      <span>Actualidad</span>
-                      <span>Agosto 2024</span>
-                    </divTab>
-                  </li>
-                  <li>
-                    <span></span>
-                    <divTab class="timeline-title"
-                      >Evolve Interactive</divTab
-                    ><br />
-                    <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i> Benito Juárez, Ciudad de Mexico </divTab
-                    ><br />
-                    <divTab class="timeline-info">
-                      • Experiencia en desarrollo nativo para Android e iOS.
-                      <br>
-                      • Especializado en la migración de apps nativas a Flutter.
-                      </divTab
-                    >
-                    <br />
-                    <divTab class="timeline-type"> Remoto </divTab><br />
-                    <divTab class="timeline-time">
-                      <span>Julio 2024</span>
-                      <span>Febrero 2024</span>
-                    </divTab>
-                  </li>
-                  <li>
-                    <span></span>
-                    <divTab class="timeline-title"
-                      >Catrina Labs</divTab
-                    ><br />
-                    <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i> Guadalajara, Jalisco </divTab
-                    ><br />
-                    <divTab class="timeline-info">
-                      • Experiencia en desarrollo nativo para Android e iOS.
-                      </divTab
-                    >
-                    <br />
-                    <divTab class="timeline-type"> Remoto </divTab><br />
-                    <divTab class="timeline-time">
-                      <span>Diciembre 2023</span>
-                      <span>Septiembre 2023</span>
-                    </divTab>
-                  </li>
-                  <li>
-                    <span></span>
-                    <divTab class="timeline-title">Paika APP</divTab><br />
-                    <divTab class="timeline-ubication"
-                      ><i class="bx bxs-map-pin"></i> San Francisco, CA
-                      (USA)</divTab
-                    ><br />
-                    <divTab class="timeline-info"
-                      >Lideré el desarrollo de un sistema de videollamadas, trabajando con SwiftUI, Flutter, Node.js, MySQL y AWS (EC2).</divTab
-                    ><br />
-                    <divTab class="timeline-type">Remoto</divTab>
-                    <divTab class="timeline-time">
-                      <span>Agosto 2023</span>
-                      <span>Julio 2021</span>
-                    </divTab>
-                  </li>
-                </ul>
-                <a href="assets/docs/cvEduardoValadez.pdf" download=""
-                  >Más...</a
-                >
               </div>
               <div id="education">
                 <br />
