--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <ul class="navbar">
           <li><a href="#home" class="nav-link">INICIO</a></li>
           <li><a href="#about" class="nav-link">ACERCA DE</a></li>
+          <li><a href="#experiencia" class="nav-link">EXPERIENCIA</a></li>
           <li><a href="#portfolio" class="nav-link">PORTAFOLIO</a></li>
           <li><a href="#contact" class="nav-link">CONTACTO</a></li>
         </ul>
@@ -59,6 +60,7 @@
         >
           <h3>INGENIERO EN SOFTWARE</h3>
           <h2>Hola, Soy <span class="color">Eduardo</span></h2>
+          <br>
           <p>Aquí es donde cada proyecto es una nueva aventura y cada reto es una oportunidad de crecer. Me apasiona lo que hago y creo que el éxito se construye paso a paso, con creatividad y un enfoque fresco. ¿Te animas a descubrir cómo transformo ideas en realidad? ¡Sigue explorando!</p>
 
           <!-- Social -->
@@ -143,8 +145,8 @@
                   <li>
                     Desarrollo Backend
                     <ul>
-                      <li>• Node JS</li>
-                      <li>• .Net</li>
+                      <li>• Node JS (Javascript)</li>
+                      <li>• .Net (C#)</li>
                     </ul>
                   </li>
                 </ul>
@@ -170,7 +172,6 @@
                     <ul>
                       <li>• Aceptación de comentarios</li>
                       <li>• Inteligencia emocional</li>
-                      <li>• Formación de equipos</li>
                     </ul>
                   </li>
                 </ul>
@@ -179,16 +180,16 @@
                 <br />
                 <ul>
                   <li>
-                    Universidad Politécnica De Pénjamo UPPE
+                   <p>Universidad Politécnica De Pénjamo UPPE</p>
                     <ul>
-                      <li>Ingeniería en Software</li>
+                      <li><h1>Ingeniería en Software</h1></li>
                     </ul>
                   </li>
                   <br />
                   <li>
-                    CBTis No. 171
+                    <p>CBTis No. 171</p>
                     <ul>
-                      <li>Técnico en Programación</li>
+                      <li><h1>Técnico en Programación</h1></li>
                     </ul>
                   </li>
                 </ul>
