--- a/index.html
+++ b/index.html
@@ -200,25 +200,70 @@
       </div>
     </section>
 
+     <!-- CV timeline -->
+      <section class="section-timeline" >
+        <h2 class="heading">Experiencia</h2>
+        <div class="timeline-cv">
+          <div class="container-timeline left-container">
+            <img src="assets/img/jobs/paika_logo.png" alt="">
+            <div class="text-box">
+              <h2>Paika App</h2>
+              <small>Julio 2021 - Septiembre 2023 | San Francisco, CA, USA.</small>
+              <br>
+              <h4>Desarrollador de Software / Líder de Equipo</h6>
+              <br>
+              <p>Diseñé la arquitectura del sistema y participé como desarrollador full stack, utilizando Flutter para aplicaciones móviles y Node.js en el backend. Posteriormente, asumí el rol de líder de equipo, coordinando a un programador y un diseñador. Implementé la metodología Scrum, gestionando la asignación de tickets y facilitando las ceremonias ágiles, asegurando entregas eficientes y alineadas con los objetivos del proyecto.</p>
+              <span class="left-container-arrow"></span>
+            </div>
+          </div>
+
+          <div class="container-timeline right-container">
+            <img src="assets/img/jobs/catrina_logo.png" alt="">
+            <div class="text-box">
+              <h2>Catrina Labs</h2>
+              <small>Octubre 2023 - Enero 2024 | Guadalajara, Jalisco, Mex.</small>
+              <br>
+              <h4>Desarrollador Web Frontend</h4>
+              <br>
+              <p>Desarrollé sitios web dinámicos utilizando PHP, enfocándome en crear diseños intuitivos y modernos. Priorizé la experiencia del usuario (UX), garantizando interfaces atractivas y funcionales que mejoran la navegación y satisfacción del cliente.</p>
+              <span class="right-container-arrow"></span>
+            </div>
+          </div>
+
+          <div class="container-timeline left-container">
+            <img src="assets/img/jobs/evolve_logo.png" alt="">
+            <div class="text-box">
+              <h2>Evolve Interactive</h2>
+              <small>Febrero 2024 - Julio 2024 | Ciudad De México, MEX. </small>
+              <br>
+              <h4>Desarrollador Móvil</h4>
+              <br>
+              <p>Fui responsable del desarrollo, mantenimiento y correcto funcionamiento de la aplicación móvil principal de la empresa para iOS, utilizando Swift y UIKit. Simultáneamente, participé activamente en la migración de la aplicación a Flutter, facilitando la unificación multiplataforma para dispositivos Android e iOS, lo que optimizó los recursos y mejoró la eficiencia en el desarrollo.</p>
+              <span class="left-container-arrow"></span>
+            </div>
+          </div>
+
+          <div class="container-timeline right-container">
+            <img src="assets/img/jobs/hdi_logo.png" alt="">
+            <div class="text-box">
+              <h2>HDI Seguros</h2>
+              <small>Agosto 2024 - Actualidad | León, Guanajuato, Mex.</small>
+              <br>
+              <h4>Ingeniero de Software</h4>
+              <br>
+              <p>Actualmente, en HDI Seguros, formo parte del área de siniestros, donde mantengo y desarrollo nuevas funcionalidades para la aplicación móvil nativa de Android, Ajustador Móvil, utilizando Java. Simultáneamente, diseño y desarrollo microservicios en .NET, integrándolos con la aplicación para optimizar el desempeño y la gestión de procesos relacionados con siniestros.</p>
+              <span class="right-container-arrow"></span>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
     <!-- Portfolio -->
     <section class="portfolio container" id="portfolio">
       <!-- heading -->
       <h2 class="heading">Portafolio</h2>
       <div class="portfolio-content">
-        <div class="portfolio-box">
-          <img src="assets/img/web.png" alt="" class="portfolio-img" />
-          <div class="portfolio-overlay">
-            <h2>Desarrollo Web</h2>
-            <a href="web.html"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-        <div class="portfolio-box">
-          <img src="assets/img/movil.png" alt="" class="portfolio-img" />
-          <div class="portfolio-overlay">
-            <h2>Desarrollo Movil</h2>
-            <a href="movil.html"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
       </div>
     </section>
 
