--- a/index.html
+++ b/index.html
@@ -255,17 +255,86 @@
               <span class="right-container-arrow"></span>
             </div>
           </div>
-
         </div>
       </section>
+
+       <!-- Logros -->
+    <section class="achievements container" id="achievements">
+      <!-- heading -->
+      <h2 class="heading">Logros</h2>
+      <br>
+      <div class="achievements-container">
+        <h2>Hackathon Soccer and Tech 5ta Edition</h2>
+        <h4>León, Guanajuato</h4>
+        <h4>2017</h4>
+        <div class="imagenes">
+          <img src="assets/img/archievements/hb_1.jpg" class="horizontal" alt="Hackathon Soccer and Tech 5ta Edition">
+          <img src="assets/img/archievements/hb_2.jpg" class="vertical" alt="Hackathon Soccer and Tech 5ta Edition">
+        </div>
+        <p>Conseguí el 1er Lugar en el Hackathon “Soccer & Tech 5ta edición” organizado por el Tec de Monterrey Campus León y Club Deportivo Leon. Mi proyecto fue una plataforma (Web y Móvil) para la búsqueda de talento deportivo.</p>
+      </div>
+      <br>
+      <div class="achievements-container">
+        <h2>XX CONCURSO NACIONAL DE PROTOTIPOS</h2>
+        <h4>Mérida, Yucatán</h4>
+        <h4>2018</h4>
+        <div class="imagenes">
+          <img src="assets/img/archievements/merida_1.jpg" class="horizontal" alt="Hackathon Soccer and Tech 5ta Edition">
+          <img src="assets/img/archievements/merida_2.jpg" class="vertical" alt="Hackathon Soccer and Tech 5ta Edition">
+        </div>
+        <p>Participé en el “Concurso Nacional de Prototipos XXI” representando el Estado de Guanajuato en la modalidad “Desarrollo de Software” con un proyecto sobre el Universo. Desarrollé una aplicación móvil con Realidad Aumentada creando un libro Interactivo. Organizado por la Unidad de Educación Media Superior Tecnológica Industrial y de Servicios – UEMSTIS, en donde participan todas las delegaciones del país y más de 400 proyectos Tecnológicos, Didácticos y de Desarrollo de Software</p>
+      </div>
+      <br>
+      <div class="achievements-container">
+        <h2>Concurso Estatal de prototipos XXI</h2>
+        <h4>León, Guanajuato</h4>
+        <h4>2017</h4>
+        <div class="imagenes">
+          <img src="assets/img/archievements/explora.jpg" class="horizontal" alt="Hackathon Soccer and Tech 5ta Edition">
+        </div>
+        <p>Fui ganador del 1er lugar en el "Concurso Estatal de Prototipos XXI" en la modalidad de Desarrollo de Software participando con un proyecto sobre el Universo, el concurso se llevó a cabo en Explora que se encuentra ubicado en León, Gto. Desarrollé una aplicación móvil con Realidad Aumentada creando un libro Interactivo.</p>
+      </div>
+      <br>
+      <div class="achievements-container">
+        <h2>AWS Mentefactura Gto Challenge</h2>
+        <h4>Silao, Guanajuato</h4>
+        <h4>2021</h4>
+        <p>En el proyecto se desarrolló un prototipo de cinta transportadora de equipaje inteligente para el aeropuerto del Bajío, donde se mostraba en tiempo real el estado de la maleta a través de una aplicación.</p>
+      </div>
+
+    </section>
 
     <!-- Portfolio -->
     <section class="portfolio container" id="portfolio">
       <!-- heading -->
       <h2 class="heading">Portafolio</h2>
       <div class="portfolio-content">
-        <center><h2>Sección en construcción...</h2></center>
-        <div id="lottie-container"></div>
+        <h2>PAGINAS WEB</h2>
+        <div class="paginas-web">
+          <div class="items-web">
+            <h3>TEKTUR</h3>
+            <a href="https://www.tektur.com.mx/">Visitar Pagina</a>
+          </div>
+          <div class="items-web">
+            <h3>LIGA DEPORTIVA INTERCOLEGIAL</h3>
+            <a href="https://www.ligadeportivaintercolegial.com/">Visitar Pagina</a>
+          </div>
+        </div>
+        <br>
+        <br>
+        <h2>APLICACIONES MOVILES</h2>
+        <div class="paginas-web">
+          <div class="items-web">
+            <h3>EMETRIX</h3>
+            <a href="https://apps.apple.com/mx/app/emetrix/id1445480090">APPSTORE</a>
+            <a href="https://play.google.com/store/apps/details?id=com.evolve.emetrixtracker2&hl=es_MX&pli=1">PLAYSTORE</a>
+          </div>
+          <div class="items-web">
+            <h3>GLUP</h3>
+            <a href="https://apps.apple.com/mx/app/glup/id1565578797">APPSTORE</a>
+            <a href="https://play.google.com/store/apps/details?id=mx.heineken.glup&hl=es_MX">PLAYSTORE</a>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -324,18 +393,6 @@
         emailjs.init("FirdkIrXUER084fnZ");
       })();
     </script>
-
-    <script>
-      // Configura la animación
-      var animation = lottie.loadAnimation({
-        container: document.getElementById('lottie-container'),
-        renderer: 'svg',  
-        loop: true,          
-        autoplay: true,         
-        path: 'assets/animations/dev_anim.json' 
-      });
-    </script>
-
 
     <!-- SweetAlert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
