--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <br>
             <h4>Desarrollador de Software - Líder de Equipo (Middle)</h4>
             <br>
-            <p>Diseñé la arquitectura del sistema y participé como desarrollador full stack, utilizando Flutter para aplicaciones móviles y Node.js en el backend. Posteriormente, asumí el rol de líder de equipo, coordinando a un programador y un diseñador. Implementé la metodología Scrum, gestionando la asignación de tickets y facilitando las ceremonias ágiles, asegurando entregas eficientes y alineadas con los objetivos del proyecto.</p>
+            <p>Diseñé la arquitectura del sistema y participé como desarrollador full stack, utilizando Flutter para aplicaciones móviles y Node.js en el backend. Posteriormente, asumí el rol de líder de equipo, coordinando a desarrolladores y testers. Implementé la metodología Scrum, gestionando la asignación de tickets y facilitando las ceremonias ágiles, asegurando entregas eficientes y alineadas con los objetivos del proyecto.</p>
             <span class="left-container-arrow"></span>
           </div>
         </div>
