--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <h2>HDI Seguros</h2>
             <small>Agosto 2024 - Actualidad | León, Guanajuato, Mex.</small>
             <br>
-            <h4>Ingeniero de Software (Senior)</h4>
+            <h4>Ingeniero de Software</h4>
             <br>
             <p>Actualmente, en HDI Seguros, formo parte del área de siniestros, donde mantengo y desarrollo nuevas funcionalidades para la aplicación móvil nativa de Android, Ajustador Móvil, utilizando Java. Simultáneamente, diseño y desarrollo microservicios en .NET, integrándolos con la aplicación para optimizar el desempeño y la gestión de procesos relacionados con siniestros.</p>
             <span class="right-container-arrow"></span>
@@ -224,7 +224,7 @@
             <h2>Evolve Interactive</h2>
             <small>Febrero 2024 - Julio 2024 | Ciudad De México, MEX. </small>
             <br>
-            <h4>Ingeniero de software - Desarrollador Móvil (Senior)</h4>
+            <h4>Ingeniero de software - Desarrollador Móvil</h4>
             <br>
             <p>Fuí lider de desarrollo, mantenimiento y correcto funcionamiento de la aplicación móvil principal de la empresa para iOS, utilizando Swift y UIKit. Simultáneamente, participé activamente en la migración de la aplicación a Flutter, facilitando la unificación multiplataforma para dispositivos Android e iOS, lo que optimizó los recursos y mejoró la eficiencia en el desarrollo.</p>
             <span class="left-container-arrow"></span>
@@ -237,7 +237,7 @@
             <h2>Catrina Labs</h2>
             <small>Octubre 2023 - Enero 2024 | Guadalajara, Jalisco, Mex.</small>
             <br>
-            <h4>Desarrollador Web Frontend (Middle)</h4>
+            <h4>Desarrollador Web Frontend</h4>
             <br>
             <p>Desarrollé sitios web dinámicos utilizando PHP, enfocándome en crear diseños intuitivos y modernos. Priorizé la experiencia del usuario (UX), garantizando interfaces atractivas y funcionales que mejoran la navegación y satisfacción del cliente.</p>
             <span class="right-container-arrow"></span>
@@ -250,7 +250,7 @@
             <h2>Paika App</h2>
             <small>Julio 2021 - Septiembre 2023 | San Francisco, CA, USA.</small>
             <br>
-            <h4>Desarrollador de Software - Líder de Equipo (Middle)</h4>
+            <h4>Desarrollador de Software - Líder de Equipo </h4>
             <br>
             <p>Diseñé la arquitectura del sistema y participé como desarrollador full stack, utilizando Flutter para aplicaciones móviles y Node.js en el backend. Posteriormente, asumí el rol de líder de equipo, coordinando a desarrolladores y testers. Implementé la metodología Scrum, gestionando la asignación de tickets y facilitando las ceremonias ágiles, asegurando entregas eficientes y alineadas con los objetivos del proyecto.</p>
             <span class="left-container-arrow"></span>
